2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* urn-scheme.tcl: Frink run.

	* Version is now 1.1.1 to distinguish from the code in tcllib
	  release 1.2

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.1

2001-11-16  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* uri.n: Updated documentation to cover the change below.

	* uri.tcl: Changed geturl dispatcher to load a scheme::geturl
	  first and the scheme package only if that fails. See the ftp and
	  ftp::geturl packages. FR #476804.

2001-10-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* uri.tcl: Fixed the ftptype regexp so that the type identifier
	  can be extracted. Fixed the ftp join code to follow the specs
	  for the type identifier. Added tests.

2001-10-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* uri.tcl: Fixes for SF bug 474846 concerning bugs with ftp
	  userinfo and path construction.

	* uri.test: New tests to chec the above fixes.

2001-10-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* The changes below are made as part of accepting SF patch #470211
	  provided by Pat Thoyts <patthoyts@users.sourceforge.net>

	* uri.n: Documented "uri::register".

	* urn-scheme.tcl: Changed to use the new registration
	  command. Added declaration of "schemepart" as that variable is
	  required for the registration.

	* uri.tcl (uri::register): New command to register url
	  schemes. Rewrote the module to make use of this command when
	  declaring the standard schemes like ftp, http, ... Fixed a bug
	  in the url declarations (access to namespace basic was
	  incorrect). The command takes care to update the overall
	  variables tracking scheme information.

	* pkgIndex.tcl: Added the new sub-package to our package index.

	* urn.test: 
	* urn-scheme.tcl: New files, new sub-packages, provide the URN
	  schema for uri's and associated testsuite.

2001-08-21  Don Porter <dgp@users.sourceforge.net>
